Updating Old File for core commit

--- a/help/using/c-rn/previous-rns/rn2018/c-rn2018-may-10.md
+++ b/help/using/c-rn/previous-rns/rn2018/c-rn2018-may-10.md
@@ -1,6 +1,6 @@
 ---
-description: 2018年5月10日リリースのリリースノートです。
-seo-description: 2018年5月10日リリースのリリースノートです。
+description: 2018年5月11日リリースのリリースノートです。
+seo-description: 2018年5月11日リリースのリリースノートです。
 seo-title: 2018 年 5 月 11 日
 solution: Experience Manager
 title: 2018 年 5 月 11 日
@@ -13,42 +13,42 @@ source-git-commit: 09011bac06f4a1c39836455f9d16654952184962
 
 # 2018 年 5 月 11 日{#may}
 
-2018年5月10日リリースのリリースノートです。
+2018年5月11日リリースのリリースノートです。
 
 ## 新機能 {#section_syx_mdt_wcb}
 
-このリリースの実稼働版では、次の機能が新機能です。
+このリリースの実稼働版では、次の機能が新たに追加されました。
 
-**プライバシーリクエスト（GGPR- ready）**。Livefyreに以下の新機能が追加され、ユーザーがアクセスレポートの生成および削除、オプトアウトおよびオプトインのリクエストに対応できるようになりました。
+**プライバシー要求（GDPR対応）**。 Livefyreに次の新機能が追加され、ユーザーがアクセスレポートを生成し、削除、オプトアウトおよびオプトインのリクエストに対応できるようになりました。
 
-* **「設定」の「新しいプライバシー」タブ。** このタブを使用して、個人データが収集され、Livefyreに提供される個人データのレポートを生成および表示できます。オプトインおよびオプトアウトのリクエストを生成し、アカウントとアカウントに関連付けられているすべての個人データを削除することもできます。
-* **Javascriptフラグを参照してください。** JavaScriptフラグを使用すると、サイト訪問者の追跡や、ビデオマスクへのカスタムプライバシーテキストの追加を避けることができます。
+* **「設定」の新しい「プライバシー」タブ** このタブを使用して、どの個人データが収集され、Livefyreに提供されたかに関するユーザーのレポートを生成および表示できます。 また、オプトインおよびオプトアウトのリクエストを生成したり、アカウントおよびアカウントに関連付けられているすべての個人データを削除したりすることもできます。
+* **JavaScriptフラグ。** JavaScriptフラグを使用して、サイト訪問者の追跡を避け、カスタムプライバシーテキストをビデオマスクに追加できます。
 
-   * サイト訪問者がオプトアウトすると、ユーザーの実装は、ユーザーがアプリケーションをインスタンス化する前にオプトアウトしているLivefyreを示す必要があります。Livefyreでは、JavaScriptオプションを使用してこれを行うこと `userPrivacyOptOut`ができます。使用 `userPrivacyOptOut`方法について [](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#section_nmz_q3n_3db)詳しくは、を参照してください。
+   *  サイトの訪問者がオプトアウトした場合、ユーザーがアプリをインスタンス化する前にオプトアウトしたことをLivefyreに示す必要があります。 JavaScriptオプションを使用してLivefyreがこれを行う方法を作成しました `userPrivacyOptOut`。 使用方法の詳細については、を参照し `userPrivacyOptOut`てくださ [](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#section_nmz_q3n_3db)い。
 
-      フラグが `userPrivacyOptOut` trueに設定されている場合、ページ上のすべてのアプリケーションはcookieまたは別の方法を使用してLivefyreサーバーにデータを送信しません。Livefyreは、サイト訪問者の追跡に使用できるデータを含むローカルストレージを更新しません。ソースがプロキシをサポートしていない場合、ユーザーがビデオをクリックし、そのソースからの潜在的なトラッキングを承認しない限り、コンテンツにはLivefyreがマスクを表示します。
+      このフラグ `userPrivacyOptOut` をtrueに設定すると、ページ上のアプリはcookieまたは他の方法を使用してLivefyreサーバーにデータを送信しません。 その後、Livefyreは、サイト訪問者の追跡に使用できるデータでローカルストレージを更新しません。 ソースがプロキシをサポートしていない場合、ユーザーがビデオをクリックして、そのソースからの潜在的なトラッキングを承認しない限り、Livefyreはコンテンツにマスクを表示します。
 
-   * ビデオマスクに表示される警告テキストを変更できます。ソースがプロキシをサポートしていない場合、ユーザーがビデオをクリックし、そのソースからの潜在的なトラッキングを承認しない限り、Livefyreはコンテンツにこのテキストとマスクを表示します。警告テキストの変更方法について [](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#section_pb5_mnp_ldb)は、を参照してください。
-   * 独自のカスタムビデオおよびプレーヤーをLivefyreビジュアライゼーションアプリに表示するビデオの一部として使用する場合は、ビデオドメインをホワイトリストに登録できます。ビデオドメインをホワイトリストに登録すると、カスタムビデオおよびプレーヤーのビデオマスクが削除されます。ビデオのホワイトリストについて詳しくは [](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#section_bzp_pnp_ldb)、を参照してください。
+   * ビデオマスクに表示される警告テキストを変更できます。 ソースがプロキシをサポートしていない場合、ユーザーがビデオをクリックしてそのソースから潜在的な追跡を承認しない限り、Livefyreはこのテキストとマスクをコンテンツに表示します。 警告テキストを変更する方法の詳細については、を参照して [ください](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#section_pb5_mnp_ldb)。
+   * 独自のカスタムビデオおよびプレーヤーをLivefyreビジュアライゼーションアプリに表示するビデオの一部として使用する場合、ビデオドメインをホワイトリストに登録できます。 ビデオドメインをホワイトリストに登録すると、カスタムビデオおよびプレーヤーのビデオマスクが削除されます。 ビデオをホワイトリストに登録する方法については、を参照し [てくださ](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#section_bzp_pnp_ldb)い。
 
-GGPR対応のプライバシーリクエストの生成方法について詳しくは [、](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#concept_q1l_r5s_rcb)
+GDPR対応のプライバシーリクエストを生成する方法について詳しくは、 [「](/help/using/c-settings-other/c-gdpr-compliance/c-gdpr-compliance.md#concept_q1l_r5s_rcb)
 
-## 雑誌号 {#section_ehw_ndt_wcb}
+## タスク {#section_ehw_ndt_wcb}
 
-このリリースでは、次の表の問題が解決しました。
+次の表に示す問題は、このリリースで解決されました。
 
-## 実稼働リリース
+## 実稼働版リリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | Studio | 個人データとプライバシーを制御できる新機能が導入されました。新しいプライバシー機能について詳しくは、 [](#c_rn/section_syx_mdt_wcb) |
+| 機能強化 | スタジオ | ユーザーが個人データやプライバシーを管理できる新機能が追加されました。 新しいプライバシー機能について詳しくは、 [](#c_rn/section_syx_mdt_wcb) |
 
 ## UATリリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | コメント | 3つのプロファイルラベルが1つのユーザープロファイルを指すが、同じプロファイルをポイントしていなかった問題を修正しました。 |
-| バグ | Modq | モデレートのRecommendationsによってマークされたコンテンツが粉砕され、すべてのコンテンツ（コンテンツのtrashedを含む）を表示しようとすると表示されなかった問題を修正しました。 |
-| 機能強化 | Studio | 作成元のソーシャルネットワークから削除されたコンテンツに対して、表示されないコンテンツのエラーメッセージが追加されました。 |
-| バグ | Studio | モデレートレコメンデーションがオンになっていない場合に表示されるモデレートのレコメンデーションの問題を修正しました。 |
+| 機能強化 | コメント | 3つのプロファイルラベルが1つのユーザープロファイルを指しているが、同じプロファイルを指していると識別されなかった問題を修正しました。 |
+| バグ | ModQ | モデレートレコメンデーションでトラッシュとマークされたコンテンツが、すべてのコンテンツ（トラッシュされたコンテンツを含む）を表示しようとすると、トラッシュされても表示されなかった問題を修正しました。 |
+| 機能強化 | スタジオ | 発信元のソーシャルネットワークから削除されたために表示されないコンテンツに関する、より詳しいエラーメッセージを追加しました。 |
+| バグ | スタジオ | モデレートレコメンデーションが有効になっていない場合にモデレートレコメンデーションが表示される問題を修正しました。 |
 
