--- a/help/using/c-rn/previous-rns/rn2017/c-rn-2017-may-18.md
+++ b/help/using/c-rn/previous-rns/rn2017/c-rn-2017-may-18.md
@@ -1,6 +1,6 @@
 ---
-description: リリースノートを参照してください。
-seo-description: リリースノートを参照してください。
+description: 2017年5月19日リリースのリリースノートです。
+seo-description: 2017年5月19日リリースのリリースノートです。
 seo-title: 2017年5月19日
 title: 2017年5月19日
 uuid: 02dbd95b-0b8a-4d8b-9d08-8459854e6251
@@ -10,32 +10,32 @@ source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
 ---
 
 
-# 2017年5月19日{#may}
+# May 18, 2017{#may}
 
-リリースノートを参照してください。
+2017年5月19日リリースのリリースノートです。
 
-## 実稼働リリース
+## 実稼働版リリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | ライブラリ | ライブラリ結果の最初のページを10個のアセットに制限するバグを修正しました。 |
-| バグ | S1コレクションルール | ルールを保存した後にキーワードを編集できるバグを修正しました。 |
-| バグ | Storify2 | Storify2のエディターで、Twitterのハッシュタグ検索によって一貫した結果が返されるように修正しました。 |
-| バグ | Studio1ルールのキュレーション | Studio1のFacebookキュレーションルールでハッシュタグ検索の実行時にすべての公開結果が取り込まれるバグを修正しました。 |
+| バグ | ライブラリ | ライブラリの結果の最初のページが10個のアセットを占めるバグを修正しました。 |
+| バグ | S1収集ルール | ルールの保存後にキーワードを編集できるバグを修正しました。 |
+| バグ | Storify 2 | Twitterのハッシュタグ検索で一貫した結果が返されるようにStorify 2のエディターのバグを修正しました。 |
+| バグ | スタジオ1キュレーションルール | Studio 1のFacebookキュレーションルールで、ハッシュタグ検索を行う際にすべての公開結果を取り込むバグを修正しました。 |
 
 ## UATリリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | API | https APIを更新し、HTTPS経由でリクエストが送信されるようにしました。 |
-| バグ | カルーセル | カルーセルで、ネイティブのLivefyreコンテンツ（Studioに直接アップロードされた画像）を適切にアプリに表示できるようにするバグを修正しました。 |
-| 機能強化 | コメント | 強化されたコメント。ADAの要件によって決定されるフォントカラーガイドラインに準拠します。 |
-| 機能強化 | コンテンツ | アプリコンテンツが強化され、アップロードボタンを使用してアップロードされたビデオ用のRAWビデオファイルをダウンロードできるようになりました。 |
-| バグ | ソーシャル検索 | Twitterのソーシャル検索を実行する際にマップの場所が保存できないバグを修正しました。 |
-| 機能強化 | Storify2 | Storify2で、ユーザーが「古い順」または「最新から古い」に並べ替えられた場合にページがジャンプする問題を修正しました。 |
-| バグ | Storify2 | 期待される動作に合わせて、Storify2の並べ替えラベルが更新されました。「古いから最新まで」および「最新から最も古い」は、「最初から最後まで」と「最後から最後へ」と表示されるようになりました。並べ替え順は、公開日ではなく、Storify2のエディターで指定された順序に基づいています。 |
+| 機能強化 | API | リクエストがhttps経由で送信されるように、ncomments APIを更新しました。 |
+| バグ | カルーセル | Carouselで、ネイティブのLivefyreコンテンツ（Studioに直接アップロードされた画像）が適切にアプリに表示される問題を修正しました。 |
+| 機能強化 | コメント | ADAの要件によって指定されたフォントカラーのガイドラインに合わせてコメントが強化されました。 |
+| 機能強化 | コンテンツ | 「アップロード」ボタンを使用してアップロードされたビデオの生のビデオファイルをユーザーがダウンロードできるように、アプリのコンテンツが強化されました。 |
+| バグ | ソーシャル検索 | Twitterのソーシャル検索を実行すると、マップの場所を保存できない問題を修正しました。 |
+| 機能強化 | Storify 2 | Storify 2で、ユーザーが「古い順」または「新しい順」で並べ替えられた場合にページがジャンプする問題を修正しました。 |
+| バグ | Storify 2 | Storify 2の並べ替えラベルが、期待どおりの動作になるように更新しました。 「古い順」と「新しい順」では、「次から次」と「次から次」が表示されるようになりました。 並べ替え順は、Storify 2のエディターで指定された順序に基づき、発行日ではなくなります。 |
 | 機能強化 | ストリームルール | ストリームルールの言語でツイートをフィルターする機能が追加されました。 |
-| 機能強化 | ストリームルール | すべてのアップロードされたメディアを、「必要なメディア」フィルターでキャプチャできるバグを修正しました。 |
-| 機能強化 | ストリームルール | TwitterおよびInstagramストリームルールで、複数のマップの場所をフィルタリングする機能が追加されました。 |
-| 機能強化 | ストリームルール | Twitterストリームルールを保存する際の検証の改善を追加しました。 |
+| 機能強化 | ストリームルール | ツイート内のアップロードされたすべてのメディアを必須メディアフィルターでキャプチャできるバグを修正しました。 |
+| 機能強化 | ストリームルール | TwitterおよびInstagramのストリームルールで、複数のマップの場所をフィルターする機能が追加されました。 |
+| 機能強化 | ストリームルール | Twitterストリームルールの保存時の検証の改善を追加しました。 |
 
