--- a/help/using/c-rn/previous-rns/rn2017/c-2017-august-24-2017.md
+++ b/help/using/c-rn/previous-rns/rn2017/c-2017-august-24-2017.md
@@ -1,40 +1,40 @@
 ---
-description: リリースノートを参照してください。
-seo-description: リリースノートを参照してください。
-seo-title: 2017年8月25日
-title: 2017年8月25日
-uuid: 873e7f78- bdb0-47c0-8af3- b92674887d0e
+description: 2017年8月25日リリースのリリースノートです。
+seo-description: 2017年8月25日リリースのリリースノートです。
+seo-title: 2017 年 8 月 25 日
+title: 2017 年 8 月 25 日
+uuid: 873e7f78-bdb0-47c0-8af3-b92674887d0e
 translation-type: tm+mt
 source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
 
 ---
 
 
-# 2017年8月25日{#august}
+# August 24, 2017{#august}
 
-リリースノートを参照してください。
+2017年8月25日リリースのリリースノートです。
 
-## 実稼働リリース
+## 実稼働版リリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | App Content， Modq | アプリコンテンツおよびMOQのコンテンツに、安全な画像分類タグを追加しました。 |
-| バグ | コメント | コメントでバグが修正され、. movまたは. mpgが正常にアップロードされるようになりました。 |
-| バグ | Modq | 「アクティビティ履歴」タブに最近の項目が表示されなかったバグを修正しました。 |
-| バグ | Studio | コメントの一括処理を許可するバグを修正しました。 |
+| 機能強化 | アプリのコンテンツ、ModQ | アプリコンテンツおよびModQのコンテンツに、SAFE画像分類タグを追加しました。 |
+| バグ | コメント | コメントのバグを修正し、.movまたは.mpgが正常にアップロードされるようにしました。 |
+| バグ | ModQ | 最近の項目が「アクティビティの履歴」タブに表示されない問題を修正しました。 |
+| バグ | スタジオ | コメントの一括トラッシュを許可するバグを修正しました。 |
 
 ## UATリリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | ライブラリ | ライブラリでタグ検索とレーティング検索の使用時に返されなかったバグを修正しました。 |
-| 機能強化 | ライブラリ、検索 | ライブラリおよびソーシャル検索ページの権限モーダルを上書きしました。アセットに対する権限を手動で付与および取り消しできる機能が追加されました。エラー/警告メッセージがより明確になり、有効な権限のリクエストおよび返信を送信することができます。アクティビティ履歴がモーダルに表示されるようになりました。 |
-| バグ | Modq | 「アクティビティ履歴」タブに最近の項目が表示されなかったバグを修正しました。 |
-| バグ | サイト | 新しいサイトの作成時に明確なエラーメッセージが追加されました。 |
-| バグ | Studio | App Managerの最近使用したフィルターと古いフィルターに関する並べ替えの問題を修正しました。 |
-| バグ | Studio | 他の接続されているネットワークがネットワークプロファイル切り替えコントロールに表示されないバグを修正しました。 |
-| バグ | Studio | ページを更新することなく、権限ステータスの更新がすぐに表示されないバグを修正しました。 |
-| バグ | Studio | 「大部分の参加者」と「ほとんどの項目」による並べ替えを有効にするバグを修正しました。 |
-| バグ | Studio | アプリのタイムスタンプが間違った作成日を表に表示するバグを修正しました。 |
-| バグ | ユーザー | 新しく招待されたユーザーマネージャーがユーザーのタグ付けなどの特定の管理アクションを実行できなかったバグを修正しました。 |
+| バグ | ライブラリ | ライブラリでタグとレーティングの検索を使用する場合に結果が返されないバグを修正しました。 |
+| 機能強化 | ライブラリ、検索 | ライブラリページとソーシャル検索ページの権限モーダルを詳細に分析しました。 手動でアセットに対する権限を付与および取り消す機能を追加しました。 エラー/警告メッセージがより明確になり、有効な権限要求と返信を送信する際に役立ちます。 モーダルに改善されたアクティビティ履歴が表示されるようになりました。 |
+| バグ | ModQ | 最近の項目が「アクティビティの履歴」タブに表示されない問題を修正しました。 |
+| バグ | Sites | 新しいサイトを作成する際に、より明確なエラーメッセージを追加。 |
+| バグ | スタジオ | App Managerの「最近」および「最も古い」フィルターの並べ替え順に関するバグを修正しました。 |
+| バグ | スタジオ | 他の接続されたネットワークがネットワークプロファイル切り替えコントロールに表示されない問題を修正しました。 |
+| バグ | スタジオ | ページを更新せずに権利ステータスの更新がすぐに表示されない問題を修正しました。 |
+| バグ | スタジオ | 「ほとんどの参加者」と「ほとんどの項目」による並べ替えを有効にするバグを修正しました。 |
+| バグ | スタジオ | アプリのタイムスタンプに表に正しくない作成日が表示されるバグを修正しました。 |
+| バグ | Users | 新しく招待されたユーザーマネージャーが、ユーザーのタグ付けなど、特定の管理操作を実行できない問題を修正しました。 |
 
