Updating Old File for core commit

--- a/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-24.md
+++ b/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-24.md
@@ -1,60 +1,60 @@
 ---
-description: 2018年5月24日リリースのリリースノートです。
-seo-description: 2018年5月24日リリースのリリースノートです。
-seo-title: 2018 年 5 月 25 日
+description: 2018年5月25日リリースのリリースノートです。
+seo-description: 2018年5月25日リリースのリリースノートです。
+seo-title: 2018年5月25日
 solution: Experience Manager
-title: 2018 年 5 月 25 日
-uuid: 6d73063e-26ed-4d84- a171-0ab45a945alia
+title: 2018年5月25日
+uuid: 6d73063e-26ed-4d84-a171-0ab45a945aec
 translation-type: tm+mt
 source-git-commit: 4990d5d46d11991f451b813757ab36843a399c0a
 
 ---
 
 
-# 2018 年 5 月 25 日{#may}
+# May 24, 2018{#may}
 
-2018年5月24日リリースのリリースノートです。
+2018年5月25日リリースのリリースノートです。
 
 ## 新機能
 
-**Instagram Rights Request， Update Part1**
+**Instagram Rights Requests, Update Part 1.**
 
-Instagram APIの変更により、LivefyreからInstagramでRightsリクエストを送信する機能は利用できません。ユーザーが権限リクエストを送信するための手動の回避策を作成しました。この方法を使用して権限リクエストを手動で送信する機能は、アプリケーションのコンテンツであり、ライブラリではありません（将来のリリースで配信される予定です）。
+Instagram APIの変更により、LivefyreからInstagramで権限リクエストを送信する機能は使用できません。 Livefyreは、ユーザーが権限リクエストを送信するための手動の回避策を作成しました。 この方法を使用して権限要求を手動で送信する機能は、App Content（ライブラリ）で使用できますが、ModQ（今後のリリースで提供される予定です）では使用できません。
 
-1. Instagram投稿から取得したアセットを開きます。
-1. 権限要求ダイアログボックスを開きます。
+1. Instagramの投稿から取得したアセットを開きます。
+1. Rights Requestダイアログボックスを開きます。
 
-   このダイアログボックスには、権限リクエストテキストが表示されます。
+   ダイアログボックスが表示され、権限リクエストテキストが表示されます。
 
-1. コピーボタンをクリックして、ボックス内のテキストをクリップボードにコピーします。
+1. 「コピー」ボタンをクリックして、ボックス内のテキストをクリップボードにコピーします。
 
    ![](../assets/rr_insta_workaround1.png)
 
-   Livefyreは、テキストをボックスからクリップボードに自動的にコピーし、テキストをコピーしたことを確認するメッセージを表示します。
+   Livefyreは、テキストをボックスからクリップボードに自動的にコピーし、テキストのコピーが完了したことを確認するメッセージを表示します。
 
-1. 確認メッセージのリンクをクリックして、権限をリクエストしているアセットを含む投稿を開きます。
+1. 確認メッセージ内のリンクをクリックして、権限を要求しているアセットを含む投稿を開きます。
 
    ![](../assets/rr_insta_workaround2.png)
 
-   InstagyreがInstagramで投稿を開きます。
+   Instagramで投稿が開きます。
 
-1. コピーした権限リクエストテキストをInstagramのInstagram投稿に貼り付けます。
+1. コピーした権利要求テキストをInstagram上のInstagram投稿に貼り付けます。
 1. 応答の投稿を監視します。
-1. Instagramユーザーが権限を付与した場合、Livefyreに手動で権利を付与できます。
+1. Instagramユーザーが権限を付与した場合は、Livefyreで手動で権限を付与できます。
 
 >[!NOTE]
 >
->よりシームレスな対応策（パート2）は、2018年6月14日までに導入されます。詳しくは [、お知らせ](/help/using/c-anouncements.md#c_anouncements)を参照してください。
+>よりシームレスな回避策（パート2）は、2018年6月14日までに導入されます。 詳しくは、「お知らせ」を参照し [てください](/help/using/c-anouncements.md#c_anouncements)。
 
-## 雑誌号
+## タスク
 
-このリリースでは、次の表の問題が解決しました。
+次の表に示す問題は、このリリースで解決されました。
 
-## 実稼働リリース
+## 実稼働版リリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | Studio | FacebookのAPIの更新で一部のメディアが正しく表示されない問題を修正しました。 |
+| バグ | スタジオ | FacebookのAPIを更新すると一部のメディアが正しく表示されない問題を修正しました。 |
 
 ## UATリリース
 
