Updating Old File for core commit

--- a/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-17.md
+++ b/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-17.md
@@ -11,37 +11,37 @@ source-git-commit: 09011bac06f4a1c39836455f9d16654952184962
 ---
 
 
-# 2018年5月18日{#may}
+# May 17, 2018{#may}
 
 2018年5月18日リリースのリリースノートです。
 
 ## 既知の問題 {#section_syx_mdt_wcb}
 
-**Instagram Rights Requestを参照してください。** Instagram APIの変更により、現在LivefyreからInstagramに権限リクエストを送信することはできません。権利リクエストを送信するには、Instagramにリクエストをコピーして貼り付け、Instagramユーザーがコンテンツに対する権利を付与した後、Livefyreに手動で権利を付与する必要があります。よりシームレスな回避策は、2018年5月25日までに導入される予定です。[](/help/using/c-anouncements.md#c_anouncements)詳しくは、こちらを参照してください。
+**Instagramの権限リクエストを参照してください。** Instagram APIの変更により、現在、LivefyreからInstagramに対して権限リクエストを送信することはできません。 権限リクエストを送信するには、Instagramユーザーがコンテンツに対する権限を付与した後、リクエストをコピーしてInstagramに貼り付け、Livefyreで手動で権限を付与する必要があります。 よりシームレスな回避策が2018年5月25日に導入されます。 [詳細はこちら](/help/using/c-anouncements.md#c_anouncements)。
 
-## 雑誌号 {#section_ehw_ndt_wcb}
+## タスク {#section_ehw_ndt_wcb}
 
-このリリースでは、次の表の問題が解決しました。
+次の表に示す問題は、このリリースで解決されました。
 
-## 実稼働リリース
+## 実稼働版リリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | アプリ | ユーザーがアセットを保存できなかったり、アセットの詳細を表示したり、Instagramのハッシュタグを使用して最初にアセットを見つけたり、Social検索を行った場合にアセットをアプリケーションに公開したりできなかった問題を修正しました。 |
-| 機能強化 | コメント | 3つのプロファイルラベルが1つのユーザープロファイルを指すが、同じプロファイルをポイントしていなかった問題を修正しました。 |
-| バグ | ライブラリ | Instagramのアセットが既にアセットライブラリに存在していたときにユーザーが表示できない問題を修正しました。 |
-| バグ | ライブラリ | ユーザーがInstagramからアセットの詳細を表示できなかった問題を修正しました。 |
-| バグ | ライブラリ | Instagram Social検索を使用した後、ユーザーがアセットを投稿または保存できなかった問題を修正しました。 |
-| バグ | ライブラリ、MOQ | モデレートレコメンデーションがオンになっていない場合に表示されるモデレートのレコメンデーションの問題を修正しました。 |
-| バグ | Modq | ユーザーがModagramのInstagramからアセットをモデレートできなかった問題を修正しました。 |
-| 機能強化 | ストリーム、ソーシャル検索 | ストリームまたはソーシャル検索を使用してInstagram内のコンテンツを検索すると、期待どおりに動作しない問題を修正しました。Livefyreは、Businessアカウントでのみ作成者またはユーザーによる検索機能を有効にするまで、ストリームまたはソーシャル検索でInstagram作成者またはユーザーによる検索機能を一時的にオフにしました。 |
-| 機能強化 | Studio | 作成元のソーシャルネットワークから削除されたコンテンツに対して、表示されないコンテンツのエラーメッセージが追加されました。 |
+| 機能強化 | アプリ | アセットがInstagramのハッシュタグまたはソーシャル検索の場所で見つかった場合に、ユーザーがアセットを保存、詳細を表示またはアプリに投稿できなかった問題を修正しました。 |
+| 機能強化 | コメント | 3つのプロファイルラベルが1つのユーザープロファイルを指しているが、同じプロファイルを指していると識別されなかった問題を修正しました。 |
+| バグ | ライブラリ | Instagramのアセットが既にアセットライブラリに存在する場合に、ユーザーに表示されない問題を修正しました。 |
+| バグ | ライブラリ | ユーザーがInstagramからアセットの詳細を表示できない問題を修正しました。 |
+| バグ | ライブラリ | Instagramのソーシャル検索を使用した後に、ユーザーがアセットを投稿または保存できなかった問題を修正しました。 |
+| バグ | ライブラリ、ModQ | モデレートレコメンデーションが有効になっていない場合にモデレートレコメンデーションが表示される問題を修正しました。 |
+| バグ | ModQ | ModQでInstagramからアセットをモデレートできない問題を修正しました。 |
+| 機能強化 | ストリーム、ソーシャル検索 | Streamsまたはソーシャル検索を使用したInstagram内のコンテンツの検索が期待どおりに動作しない問題を修正しました。 Livefyreは、「発言者」または「ユーザー」によるビジネスアカウントのみの検索を有効にするまで、Instagramの発言者またはユーザーによるストリームまたはソーシャル検索の検索機能を一時的に無効にしました。 |
+| 機能強化 | スタジオ | 発信元のソーシャルネットワークから削除されたために表示されないコンテンツに関する、より詳しいエラーメッセージを追加しました。 |
 
 ## UATリリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | アプリ | FacebookのAPIの更新で一部のメディアが正しく表示されない問題を修正しました。 |
-| 機能強化 | アプリ、ストリーム | アプリを削除すると、そのアプリに関連付けられているすべてのストリームが削除されます。 |
-| バグ | Studio | 不敬のあるコンテンツが浪費フィルターによってキャッチされない問題を修正しました。 |
+| バグ | Apps | FacebookのAPIを更新すると一部のメディアが正しく表示されない問題を修正しました。 |
+| 機能強化 | アプリ、ストリーム | 現在は、アプリを削除すると、そのアプリに関連付けられているすべてのストリームが削除されます。 |
+| バグ | スタジオ | 不敬な言葉を含むコンテンツが不敬な言葉のフィルターに捕捉されない問題を修正しました。 |
 
