--- a/help/using/c-rn/previous-rns/rn2017/c-2017-august-24-2017.md
+++ b/help/using/c-rn/previous-rns/rn2017/c-2017-august-24-2017.md
@@ -6,11 +6,14 @@ title: 2017 年 8 月 25 日
 uuid: 873e7f78-bdb0-47c0-8af3-b92674887d0e
 translation-type: tm+mt
 source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
+workflow-type: tm+mt
+source-wordcount: '297'
+ht-degree: 8%
 
 ---
 
 
-# August 24, 2017{#august}
+# 2017年8月24日{#august}
 
 2017年8月25日リリースのリリースノートです。
 
@@ -18,23 +21,23 @@ source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | アプリのコンテンツ、ModQ | アプリコンテンツおよびModQのコンテンツに、SAFE画像分類タグを追加しました。 |
+| 機能強化 | アプリのコンテンツ、ModQ | アプリコンテンツおよびModQのコンテンツに、安全な画像分類タグを追加しました。 |
 | バグ | コメント | コメントのバグを修正し、.movまたは.mpgが正常にアップロードされるようにしました。 |
-| バグ | ModQ | 最近の項目が「アクティビティの履歴」タブに表示されない問題を修正しました。 |
-| バグ | スタジオ | コメントの一括トラッシュを許可するバグを修正しました。 |
+| バグ | ModQ | 「アクティビティの履歴」タブに最近の項目が表示されない問題を修正しました。 |
+| バグ | スタジオ | コメントを一括トラッシュできるバグを修正しました。 |
 
 ## UATリリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | ライブラリ | ライブラリでタグとレーティングの検索を使用する場合に結果が返されないバグを修正しました。 |
-| 機能強化 | ライブラリ、検索 | ライブラリページとソーシャル検索ページの権限モーダルを詳細に分析しました。 手動でアセットに対する権限を付与および取り消す機能を追加しました。 エラー/警告メッセージがより明確になり、有効な権限要求と返信を送信する際に役立ちます。 モーダルに改善されたアクティビティ履歴が表示されるようになりました。 |
-| バグ | ModQ | 最近の項目が「アクティビティの履歴」タブに表示されない問題を修正しました。 |
-| バグ | Sites | 新しいサイトを作成する際に、より明確なエラーメッセージを追加。 |
-| バグ | スタジオ | App Managerの「最近」および「最も古い」フィルターの並べ替え順に関するバグを修正しました。 |
-| バグ | スタジオ | 他の接続されたネットワークがネットワークプロファイル切り替えコントロールに表示されない問題を修正しました。 |
-| バグ | スタジオ | ページを更新せずに権利ステータスの更新がすぐに表示されない問題を修正しました。 |
-| バグ | スタジオ | 「ほとんどの参加者」と「ほとんどの項目」による並べ替えを有効にするバグを修正しました。 |
-| バグ | スタジオ | アプリのタイムスタンプに表に正しくない作成日が表示されるバグを修正しました。 |
-| バグ | Users | 新しく招待されたユーザーマネージャーが、ユーザーのタグ付けなど、特定の管理操作を実行できない問題を修正しました。 |
+| バグ | ライブラリ | ライブラリでタグと評価の検索を使用する場合に結果が返されないバグを修正しました。 |
+| 機能強化 | ライブラリ、検索 | ライブラリページとソーシャル検索ページの権限モーダルを一新しました。 手動でアセットの権限を付与および失効する機能を追加しました。 エラー/警告メッセージがより明確になり、有効な権限の要求と返信を送信する際に役立ちます。 アクティビティ履歴が改善され、モーダルに表示されるようになりました。 |
+| バグ | ModQ | 「アクティビティの履歴」タブに最近の項目が表示されない問題を修正しました。 |
+| バグ | Sites | 新しいサイトを作成する際の明確なエラーメッセージを追加しました。 |
+| バグ | スタジオ | App Managerの「最新」と「最も古い」のフィルターに関する並べ替え順のバグが修正されました。 |
+| バグ | スタジオ | 他の接続されたネットワークがネットワークプロファイル切り替えボタンに表示されない問題を修正しました。 |
+| バグ | スタジオ | ページを更新せずに権限ステータスの更新が直ちに表示されない問題を修正しました。 |
+| バグ | スタジオ | 「ほとんどの参加者」と「ほとんどの項目」による並べ替えが有効になるバグを修正しました。 |
+| バグ | スタジオ | アプリのタイムスタンプに表に誤った作成日が表示される問題を修正しました。 |
+| バグ | Users | 新しく招待されたユーザーマネージャーが、ユーザーのタグ付けなど、特定の管理操作を実行できなかった問題を修正しました。 |
 
