Updating Old File for core commit

--- a/help/using/c-rn/previous-rns/rn2017/c-rn-2017-may-18.md
+++ b/help/using/c-rn/previous-rns/rn2017/c-rn-2017-may-18.md
@@ -6,11 +6,14 @@ title: 2017年5月19日
 uuid: 02dbd95b-0b8a-4d8b-9d08-8459854e6251
 translation-type: tm+mt
 source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
+workflow-type: tm+mt
+source-wordcount: '330'
+ht-degree: 7%
 
 ---
 
 
-# May 18, 2017{#may}
+# 2017年5月18日{#may}
 
 2017年5月19日リリースのリリースノートです。
 
@@ -18,24 +21,24 @@ source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | ライブラリ | ライブラリの結果の最初のページが10個のアセットを占めるバグを修正しました。 |
+| バグ | ライブラリ | ライブラリ結果の最初のページを10個のアセットに制限するバグを修正しました。 |
 | バグ | S1収集ルール | ルールの保存後にキーワードを編集できるバグを修正しました。 |
 | バグ | Storify 2 | Twitterのハッシュタグ検索で一貫した結果が返されるようにStorify 2のエディターのバグを修正しました。 |
-| バグ | スタジオ1キュレーションルール | Studio 1のFacebookキュレーションルールで、ハッシュタグ検索を行う際にすべての公開結果を取り込むバグを修正しました。 |
+| バグ | スタジオ1キュレーションルール | ハッシュタグ検索を行う際に、Studio 1のFacebookキュレーションルールですべての公開結果が取り込まれるバグを修正しました。 |
 
 ## UATリリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | API | リクエストがhttps経由で送信されるように、ncomments APIを更新しました。 |
-| バグ | カルーセル | Carouselで、ネイティブのLivefyreコンテンツ（Studioに直接アップロードされた画像）が適切にアプリに表示される問題を修正しました。 |
-| 機能強化 | コメント | ADAの要件によって指定されたフォントカラーのガイドラインに合わせてコメントが強化されました。 |
-| 機能強化 | コンテンツ | 「アップロード」ボタンを使用してアップロードされたビデオの生のビデオファイルをユーザーがダウンロードできるように、アプリのコンテンツが強化されました。 |
-| バグ | ソーシャル検索 | Twitterのソーシャル検索を実行すると、マップの場所を保存できない問題を修正しました。 |
+| 機能強化 | API | リクエストがhttps経由で送信されるように、コメントAPIを更新しました。 |
+| バグ | カルーセル | カルーセルで、ネイティブのLivefyreコンテンツ（Studioに直接アップロードされた画像）が適切にアプリに表示される問題を修正しました。 |
+| 機能強化 | コメント | ADAの要件で指定されているフォントの色のガイドラインに合わせてコメントが強化されました。 |
+| 機能強化 | コンテンツ | アプリのコンテンツが強化され、「アップロード」ボタンを使用してアップロードされたビデオの生のビデオファイルをユーザーがダウンロードできるようになりました。 |
+| バグ | ソーシャル検索 | Twitterのソーシャル検索を実行すると、マップの場所を保存できなかった問題を修正しました。 |
 | 機能強化 | Storify 2 | Storify 2で、ユーザーが「古い順」または「新しい順」で並べ替えられた場合にページがジャンプする問題を修正しました。 |
-| バグ | Storify 2 | Storify 2の並べ替えラベルが、期待どおりの動作になるように更新しました。 「古い順」と「新しい順」では、「次から次」と「次から次」が表示されるようになりました。 並べ替え順は、Storify 2のエディターで指定された順序に基づき、発行日ではなくなります。 |
+| バグ | Storify 2 | Storify 2の並べ替えラベルが、期待どおりの動作になるように更新されました。 「古い順」と「新しい順」で、「新しい順」では「次の順」と「次の順」が表示されるようになりました。 並べ替え順は、発行日ではなく、Storify 2のエディターで指定された順序に基づきます。 |
 | 機能強化 | ストリームルール | ストリームルールの言語でツイートをフィルターする機能が追加されました。 |
-| 機能強化 | ストリームルール | ツイート内のアップロードされたすべてのメディアを必須メディアフィルターでキャプチャできるバグを修正しました。 |
+| 機能強化 | ストリームルール | ツイート内のアップロードされたすべてのメディアを必要なメディアフィルターでキャプチャできるバグを修正しました。 |
 | 機能強化 | ストリームルール | TwitterおよびInstagramのストリームルールで、複数のマップの場所をフィルターする機能が追加されました。 |
 | 機能強化 | ストリームルール | Twitterストリームルールの保存時の検証の改善を追加しました。 |
 
