Updating Old File for core commit

--- a/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-17.md
+++ b/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-17.md
@@ -7,17 +7,20 @@ title: 2018年5月18日
 uuid: 03e92341-8e47-43dc-9379-31c2c0c10244
 translation-type: tm+mt
 source-git-commit: 09011bac06f4a1c39836455f9d16654952184962
+workflow-type: tm+mt
+source-wordcount: '391'
+ht-degree: 6%
 
 ---
 
 
-# May 17, 2018{#may}
+# 2018年5月17日{#may}
 
 2018年5月18日リリースのリリースノートです。
 
 ## 既知の問題 {#section_syx_mdt_wcb}
 
-**Instagramの権限リクエストを参照してください。** Instagram APIの変更により、現在、LivefyreからInstagramに対して権限リクエストを送信することはできません。 権限リクエストを送信するには、Instagramユーザーがコンテンツに対する権限を付与した後、リクエストをコピーしてInstagramに貼り付け、Livefyreで手動で権限を付与する必要があります。 よりシームレスな回避策が2018年5月25日に導入されます。 [詳細はこちら](/help/using/c-anouncements.md#c_anouncements)。
+**Instagramの権限のリクエストを参照してください。** Instagram APIの変更により、現在、LivefyreからInstagramに対して権限リクエストを送信したり、Instagramから権限リクエストを送信したりすることはできません。権限リクエストを送信するには、Instagramユーザーがコンテンツに対する権限を付与した後に、リクエストをコピーしてInstagramに貼り付け、Livefyreで手動で権限を付与する必要があります。 2018年5月25日までに、よりシームレスな回避策が導入されます。 [詳細はこちら](/help/using/c-anouncements.md#c_anouncements)。
 
 ## タスク {#section_ehw_ndt_wcb}
 
@@ -27,15 +30,15 @@ source-git-commit: 09011bac06f4a1c39836455f9d16654952184962
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | アプリ | アセットがInstagramのハッシュタグまたはソーシャル検索の場所で見つかった場合に、ユーザーがアセットを保存、詳細を表示またはアプリに投稿できなかった問題を修正しました。 |
-| 機能強化 | コメント | 3つのプロファイルラベルが1つのユーザープロファイルを指しているが、同じプロファイルを指していると識別されなかった問題を修正しました。 |
+| 機能強化 | アプリ | アセットがInstagramのハッシュタグまたはソーシャル検索の場所で最初に見つかった場合に、アセットを保存、表示の詳細をアプリに保存または投稿できなかった問題を修正しました。 |
+| 機能強化 | コメント | 3つのプロファイルラベルが1人のプロファイルプロファイルを指しているが、同じを指していると識別されない問題を修正しました。 |
 | バグ | ライブラリ | Instagramのアセットが既にアセットライブラリに存在する場合に、ユーザーに表示されない問題を修正しました。 |
-| バグ | ライブラリ | ユーザーがInstagramからアセットの詳細を表示できない問題を修正しました。 |
-| バグ | ライブラリ | Instagramのソーシャル検索を使用した後に、ユーザーがアセットを投稿または保存できなかった問題を修正しました。 |
-| バグ | ライブラリ、ModQ | モデレートレコメンデーションが有効になっていない場合にモデレートレコメンデーションが表示される問題を修正しました。 |
+| バグ | ライブラリ | Instagramからアセットの詳細を表示できない問題を修正しました。 |
+| バグ | ライブラリ | Instagramのソーシャル検索を使用した後、ユーザーがアセットを投稿または保存できなかった問題を修正しました。 |
+| バグ | ライブラリ、ModQ | モデレートのレコメンデーションが有効になっていない場合にモデレートのレコメンデーションが表示される問題を修正しました。 |
 | バグ | ModQ | ModQでInstagramからアセットをモデレートできない問題を修正しました。 |
-| 機能強化 | ストリーム、ソーシャル検索 | Streamsまたはソーシャル検索を使用したInstagram内のコンテンツの検索が期待どおりに動作しない問題を修正しました。 Livefyreは、「発言者」または「ユーザー」によるビジネスアカウントのみの検索を有効にするまで、Instagramの発言者またはユーザーによるストリームまたはソーシャル検索の検索機能を一時的に無効にしました。 |
-| 機能強化 | スタジオ | 発信元のソーシャルネットワークから削除されたために表示されないコンテンツに関する、より詳しいエラーメッセージを追加しました。 |
+| 機能強化 | ストリーム、ソーシャル検索 | Streamsまたはソーシャル検索を介したInstagram内のコンテンツの検索が期待どおりに動作しなくなる問題を修正しました。 Livefyreは、ビジネスアカウントに対してのみ作成者またはユーザーによる検索を有効にするまで、Instagramの作成者またはストリームまたはソーシャル検索内のユーザーによる検索機能を一時的に無効にしています。 |
+| 機能強化 | スタジオ | 元のソーシャルネットワークから削除されたので表示されないコンテンツに関する、より有益なエラーメッセージを追加しました。 |
 
 ## UATリリース
 
