--- a/help/using/c-rn/previous-rns/rn2017/c-rn-2017-may-18.md
+++ b/help/using/c-rn/previous-rns/rn2017/c-rn-2017-may-18.md
@@ -1,17 +1,14 @@
 ---
 description: 2017年5月19日リリースのリリースノートです。
-seo-description: 2017年5月19日リリースのリリースノートです。
-seo-title: 2017年5月19日
 title: 2017年5月19日
-uuid: 02dbd95b-0b8a-4d8b-9d08-8459854e6251
+exl-id: 440a1bb2-09e6-4cda-a5fe-b84f5adc40ed
 translation-type: tm+mt
-source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
+source-git-commit: a2449482e617939cfda7e367da34875bf187c4c9
 workflow-type: tm+mt
-source-wordcount: '330'
-ht-degree: 7%
+source-wordcount: '323'
+ht-degree: 8%
 
 ---
-
 
 # 2017年5月18日{#may}
 
@@ -23,8 +20,8 @@ ht-degree: 7%
 |---|---|---|
 | バグ | ライブラリ | ライブラリ結果の最初のページを10個のアセットに制限するバグを修正しました。 |
 | バグ | S1収集ルール | ルールの保存後にキーワードを編集できるバグを修正しました。 |
-| バグ | Storify 2 | Twitterのハッシュタグ検索で一貫した結果が返されるようにStorify 2のエディターのバグを修正しました。 |
-| バグ | スタジオ1キュレーションルール | ハッシュタグ検索を行う際に、Studio 1のFacebookキュレーションルールですべての公開結果が取り込まれるバグを修正しました。 |
+| バグ | Storify 2 | Storify 2のエディターで、Twitterのハッシュタグ検索が一貫した結果を返すようにバグを修正しました。 |
+| バグ | スタジオ1キュレーションルール | Studio 1のFacebookキュレートルールで、ハッシュタグ検索を実行するとすべての公開結果が取り込まれるバグを修正しました。 |
 
 ## UATリリース
 
@@ -34,11 +31,10 @@ ht-degree: 7%
 | バグ | カルーセル | カルーセルで、ネイティブのLivefyreコンテンツ（Studioに直接アップロードされた画像）が適切にアプリに表示される問題を修正しました。 |
 | 機能強化 | コメント | ADAの要件で指定されているフォントの色のガイドラインに合わせてコメントが強化されました。 |
 | 機能強化 | コンテンツ | アプリのコンテンツが強化され、「アップロード」ボタンを使用してアップロードされたビデオの生のビデオファイルをユーザーがダウンロードできるようになりました。 |
-| バグ | ソーシャル検索 | Twitterのソーシャル検索を実行すると、マップの場所を保存できなかった問題を修正しました。 |
+| バグ | ソーシャル検索 | twitterのソーシャル検索を実行すると、マップの場所が保存できない問題を修正しました。 |
 | 機能強化 | Storify 2 | Storify 2で、ユーザーが「古い順」または「新しい順」で並べ替えられた場合にページがジャンプする問題を修正しました。 |
 | バグ | Storify 2 | Storify 2の並べ替えラベルが、期待どおりの動作になるように更新されました。 「古い順」と「新しい順」で、「新しい順」では「次の順」と「次の順」が表示されるようになりました。 並べ替え順は、発行日ではなく、Storify 2のエディターで指定された順序に基づきます。 |
 | 機能強化 | ストリームルール | ストリームルールの言語でツイートをフィルターする機能が追加されました。 |
 | 機能強化 | ストリームルール | ツイート内のアップロードされたすべてのメディアを必要なメディアフィルターでキャプチャできるバグを修正しました。 |
-| 機能強化 | ストリームルール | TwitterおよびInstagramのストリームルールで、複数のマップの場所をフィルターする機能が追加されました。 |
-| 機能強化 | ストリームルール | Twitterストリームルールの保存時の検証の改善を追加しました。 |
-
+| 機能強化 | ストリームルール | twitterおよびInstagramストリームルールで、複数の地図の場所をフィルタリングする機能が追加されました。 |
+| 機能強化 | ストリームルール | twitterストリームルールの保存時の検証の改善を追加しました。 |
