--- a/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-17.md
+++ b/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-17.md
@@ -1,18 +1,14 @@
 ---
 description: 2018年5月18日リリースのリリースノートです。
-seo-description: 2018年5月18日リリースのリリースノートです。
-seo-title: 2018年5月18日
-solution: Experience Manager
 title: 2018年5月18日
-uuid: 03e92341-8e47-43dc-9379-31c2c0c10244
+exl-id: 53e8406f-fe84-4578-99f2-77e27740231c
 translation-type: tm+mt
-source-git-commit: 09011bac06f4a1c39836455f9d16654952184962
+source-git-commit: a2449482e617939cfda7e367da34875bf187c4c9
 workflow-type: tm+mt
-source-wordcount: '391'
-ht-degree: 6%
+source-wordcount: '384'
+ht-degree: 7%
 
 ---
-
 
 # 2018年5月17日{#may}
 
@@ -20,7 +16,7 @@ ht-degree: 6%
 
 ## 既知の問題 {#section_syx_mdt_wcb}
 
-**Instagramの権限のリクエストを参照してください。** Instagram APIの変更により、現在、LivefyreからInstagramに対して権限リクエストを送信したり、Instagramから権限リクエストを送信したりすることはできません。権限リクエストを送信するには、Instagramユーザーがコンテンツに対する権限を付与した後に、リクエストをコピーしてInstagramに貼り付け、Livefyreで手動で権限を付与する必要があります。 2018年5月25日までに、よりシームレスな回避策が導入されます。 [詳細はこちら](/help/using/c-anouncements.md#c_anouncements)。
+**Instagramの権利の要請。** instagramAPIの変更により、現在、LivefyreからInstagramに対して権限リクエストを送信したり、から権限リクエストを送信したりすることはできません。権限リクエストを送信するには、リクエストをコピーしてInstagramに貼り付け、Instagramユーザーがコンテンツに対する権限を付与した後、Livefyreで手動で権限を付与する必要があります。 2018年5月25日までに、よりシームレスな回避策が導入されます。 [詳細はこちら](/help/using/c-anouncements.md#c_anouncements)。
 
 ## タスク {#section_ehw_ndt_wcb}
 
@@ -30,21 +26,20 @@ ht-degree: 6%
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| 機能強化 | アプリ | アセットがInstagramのハッシュタグまたはソーシャル検索の場所で最初に見つかった場合に、アセットを保存、表示の詳細をアプリに保存または投稿できなかった問題を修正しました。 |
+| 機能強化 | アプリ | アセットがInstagramのハッシュタグまたはソーシャル検索の場所で最初に見つかった場合に、アセットを保存、表示の詳細をアプリに保存、または投稿できなかった問題を修正しました。 |
 | 機能強化 | コメント | 3つのプロファイルラベルが1人のプロファイルプロファイルを指しているが、同じを指していると識別されない問題を修正しました。 |
-| バグ | ライブラリ | Instagramのアセットが既にアセットライブラリに存在する場合に、ユーザーに表示されない問題を修正しました。 |
-| バグ | ライブラリ | Instagramからアセットの詳細を表示できない問題を修正しました。 |
-| バグ | ライブラリ | Instagramのソーシャル検索を使用した後、ユーザーがアセットを投稿または保存できなかった問題を修正しました。 |
+| バグ | ライブラリ | instagramのアセットが既にアセットライブラリにある場合に、ユーザーに表示されない問題を修正しました。 |
+| バグ | ライブラリ | ユーザーがInstagramからのアセットの詳細を表示できない問題を修正しました。 |
+| バグ | ライブラリ | 「Instagramソーシャル検索」を使用した後、アセットを投稿または保存できない問題を修正しました。 |
 | バグ | ライブラリ、ModQ | モデレートのレコメンデーションが有効になっていない場合にモデレートのレコメンデーションが表示される問題を修正しました。 |
 | バグ | ModQ | ModQでInstagramからアセットをモデレートできない問題を修正しました。 |
-| 機能強化 | ストリーム、ソーシャル検索 | Streamsまたはソーシャル検索を介したInstagram内のコンテンツの検索が期待どおりに動作しなくなる問題を修正しました。 Livefyreは、ビジネスアカウントに対してのみ作成者またはユーザーによる検索を有効にするまで、Instagramの作成者またはストリームまたはソーシャル検索内のユーザーによる検索機能を一時的に無効にしています。 |
+| 機能強化 | ストリーム、ソーシャル検索 | Streamsまたはソーシャル検索を介したInstagram内のコンテンツの検索が期待どおりに動作しなくなる問題を修正しました。 Livefyreは、ビジネスアカウントに対してのみ作成者またはユーザーが検索できるようになるまで、Instagram発言者またはストリームまたはソーシャル検索でのユーザーによる検索機能を一時的に無効にしています。 |
 | 機能強化 | スタジオ | 元のソーシャルネットワークから削除されたので表示されないコンテンツに関する、より有益なエラーメッセージを追加しました。 |
 
 ## UATリリース
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | Apps | FacebookのAPIを更新すると一部のメディアが正しく表示されない問題を修正しました。 |
+| バグ | Apps | facebookのAPIを更新すると、一部のメディアが正しく表示されない問題を修正しました。 |
 | 機能強化 | アプリ、ストリーム | 現在は、アプリを削除すると、そのアプリに関連付けられているすべてのストリームが削除されます。 |
 | バグ | スタジオ | 不敬な言葉を含むコンテンツが不敬な言葉のフィルターに捕捉されない問題を修正しました。 |
-
