--- a/help/using/c-rn/previous-rns/rn2017/c-2017-august-24-2017.md
+++ b/help/using/c-rn/previous-rns/rn2017/c-2017-august-24-2017.md
@@ -1,17 +1,14 @@
 ---
 description: 2017年8月25日リリースのリリースノートです。
-seo-description: 2017年8月25日リリースのリリースノートです。
-seo-title: 2017 年 8 月 25 日
 title: 2017 年 8 月 25 日
-uuid: 873e7f78-bdb0-47c0-8af3-b92674887d0e
+exl-id: 82f2defb-a94b-4dfc-8a58-4036add8a8c5
 translation-type: tm+mt
-source-git-commit: 35feb87bb82d1f298496717a65f1972cf4e71104
+source-git-commit: a2449482e617939cfda7e367da34875bf187c4c9
 workflow-type: tm+mt
-source-wordcount: '297'
+source-wordcount: '290'
 ht-degree: 8%
 
 ---
-
 
 # 2017年8月24日{#august}
 
@@ -40,4 +37,3 @@ ht-degree: 8%
 | バグ | スタジオ | 「ほとんどの参加者」と「ほとんどの項目」による並べ替えが有効になるバグを修正しました。 |
 | バグ | スタジオ | アプリのタイムスタンプに表に誤った作成日が表示される問題を修正しました。 |
 | バグ | Users | 新しく招待されたユーザーマネージャーが、ユーザーのタグ付けなど、特定の管理操作を実行できなかった問題を修正しました。 |
-
