Updating Old File for core commit a2449482e617939cfda7e367da34875bf187c4c9

--- a/help/using/c-rn/previous-rns/rn2018/c-rn2018-may-10.md
+++ b/help/using/c-rn/previous-rns/rn2018/c-rn2018-may-10.md
@@ -1,18 +1,14 @@
 ---
 description: 2018年5月11日リリースのリリースノートです。
-seo-description: 2018年5月11日リリースのリリースノートです。
-seo-title: 2018 年 5 月 11 日
-solution: Experience Manager
 title: 2018 年 5 月 11 日
-uuid: 2ae80b49-3328-42a3-948c-526097abea3e
+exl-id: 4a29e9b4-2455-4df7-b914-663054442ad2
 translation-type: tm+mt
-source-git-commit: 52f59cd15f315aa93be198f6eb586f008c18a384
+source-git-commit: a2449482e617939cfda7e367da34875bf187c4c9
 workflow-type: tm+mt
-source-wordcount: '499'
+source-wordcount: '492'
 ht-degree: 3%
 
 ---
-
 
 # 2018 年 5 月 11 日{#may}
 
@@ -54,4 +50,3 @@ GDPR対応のプライバシー要求を生成する方法の詳細は[](/help/u
 | バグ | ModQ | Moderation Serviceでトラッシュとしてマークされたコンテンツが、すべてのコンテンツ（トラッシュされたコンテンツを含む）を表示しようとすると、トラッシュされても表示されない問題を修正しました。 |
 | 機能強化 | スタジオ | 元のソーシャルネットワークから削除されたので表示されないコンテンツに関する、より有益なエラーメッセージを追加しました。 |
 | バグ | スタジオ | モデレートのレコメンデーションが有効になっていない場合にモデレートのレコメンデーションが表示される問題を修正しました。 |
-
