Updating Old File for core commit a2449482e617939cfda7e367da34875bf187c4c9

--- a/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-24.md
+++ b/help/using/c-rn/previous-rns/rn2018/c-rn-2018-may-24.md
@@ -1,18 +1,14 @@
 ---
 description: 2018年5月25日リリースのリリースノートです。
-seo-description: 2018年5月25日リリースのリリースノートです。
-seo-title: 2018年5月25日
-solution: Experience Manager
 title: 2018年5月25日
-uuid: 6d73063e-26ed-4d84-a171-0ab45a945aec
+exl-id: 7f8a0dd5-a7e9-45a8-9f66-19e5f6912b06
 translation-type: tm+mt
-source-git-commit: 4990d5d46d11991f451b813757ab36843a399c0a
+source-git-commit: a2449482e617939cfda7e367da34875bf187c4c9
 workflow-type: tm+mt
-source-wordcount: '267'
+source-wordcount: '260'
 ht-degree: 2%
 
 ---
-
 
 # 2018年5月24日{#may}
 
@@ -20,11 +16,11 @@ ht-degree: 2%
 
 ## 新機能
 
-**Instagram Rights Requests, Update Part 1.**
+**Instagramの権利の要請、更新パート1。**
 
-LivefyreからInstagram内の権限リクエストを送信する機能は、Instagram APIの変更により使用できません。 Livefyreでは、ユーザーが権限リクエストを送信できるように、手動で対処する方法が作成されています。 この方法を使用して権限リクエストを手動で送信する機能は、App Content（ライブラリ）では利用できますが、ModQでは利用できません（今後のリリースで提供される予定です）。
+instagramAPIの変更により、LivefyreからInstagramで権限リクエストを送信する機能を使用できない。 Livefyreでは、ユーザーが権限リクエストを送信できるように、手動で対処する方法が作成されています。 この方法を使用して権限リクエストを手動で送信する機能は、App Content（ライブラリ）では利用できますが、ModQでは利用できません（今後のリリースで提供される予定です）。
 
-1. Instagramの投稿から取得したアセットを開きます。
+1. instagramの投稿から取得したアセットを開きます。
 1. Rights Requestダイアログボックスを開きます。
 
    ダイアログボックスが表示され、権限リクエストのテキストが示されます。
@@ -39,15 +35,15 @@ LivefyreからInstagram内の権限リクエストを送信する機能は、Ins
 
    ![](../assets/rr_insta_workaround2.png)
 
-   Instagramで投稿が開きます。
+   LivefyreがInstagramで投稿を開きます。
 
-1. コピーした権限要求テキストをInstagram上のInstagram投稿に貼り付けます。
+1. コピーした権利要求のテキストをInstagramのInstagram投稿に貼り付けます。
 1. 応答に関する投稿を監視します。
-1. Instagramのユーザーが権限を付与した場合は、Livefyreで手動で権限を付与できます。
+1. instagramのユーザーが権限を付与した場合は、Livefyreで手動で権限を付与できます。
 
 >[!NOTE]
 >
->よりシームレスな回避策（パート2）は、2018年6月14日までに導入されます。 詳しくは、[お知らせ](/help/using/c-anouncements.md#c_anouncements)を参照してください。
+>よりシームレスな回避策（パート2）は、2018年6月15日までに導入されます。 詳しくは、[お知らせ](/help/using/c-anouncements.md#c_anouncements)を参照してください。
 
 ## タスク
 
@@ -57,7 +53,7 @@ LivefyreからInstagram内の権限リクエストを送信する機能は、Ins
 
 | **問題のタイプ** | **コンポーネント** | **リリースノート** |
 |---|---|---|
-| バグ | スタジオ | FacebookのAPIを更新すると一部のメディアが正しく表示されない問題を修正しました。 |
+| バグ | スタジオ | facebookのAPIを更新すると、一部のメディアが正しく表示されない問題を修正しました。 |
 
 ## UATリリース
 
